--- a/.htaccess
+++ b/.htaccess
@@ -12,8 +12,10 @@ RewriteEngine On
 RewriteRule layout/(.*)$ resources/css/$1
 RewriteRule img/(.*)$ resources/img/$1
 RewriteRule js/(.*)$ resources/js/$1
+RewriteRule ^pokedex/(.*)$ webapp/components/pokedex/$1
+RewriteRule ^modules/pokedex/(.*)$ webapp/modules/pokedex/$1
 
 #Structural rules
-#RewriteCond %{SCRIPT_FILENAME} !-d
-#RewriteCond %{SCRIPT_FILENAME} !-f
-#RewriteRule ^(.*)$	index.php?p=$1 [L]
+RewriteCond %{SCRIPT_FILENAME} !-d
+RewriteCond %{SCRIPT_FILENAME} !-f
+RewriteRule ^(.*)$	index.php?q=$1 [L]
